--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@tanstack/react-table": "^8.21.3",
     "bootstrap": "^5.3.6",
     "howler": "^2.2.4",
+    "node-vibrant": "^4.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
